force-app/main/default/objects/Limit_Snapshot__c/Limit_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Limit Snapshot</label>
    <nameField>
        <displayFormat>LS-{000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limit Snapshot</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>