force-app/main/default/objects/Limit_Snapshot__c/fields/Consumed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Percentage__c</fullName>
    <formula>IF(Max_Value__c = 0,0,Value__c /  Max_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumed Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>