force-app/main/default/objects/Limit_Snapshot__c/fields/Limit_Max_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Limit_Max_Threshold__c</fullName>
    <formula>Limits__r.Alert_Threshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Max Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>