force-app/main/default/objects/Limit_Snapshot__c/fields/Limit_Name__c.field-meta.xml
<CustomField>
    <fullName>Limit_Name__c</fullName>
    <formula>Limits__r.ExternalId__c</formula>
    <label>Limit Name</label>
    <type>Text</type>
</CustomField>