force-app/main/default/objects/Limit_Snapshot__c/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <label>Limits</label>
    <referenceTo>Limits__c</referenceTo>
    <relationshipLabel>Limit Snapshot</relationshipLabel>
    <relationshipName>Limit_Snapshot</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>