force-app/main/default/objects/Limit_Snapshot__c/fields/Mark_for_Delete__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Delete__c</fullName>
    <formula>IF( NOW() &gt; (CreatedDate + Limits__r.Retention_Days__c  ), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark for Delete</label>
    <type>Checkbox</type>
</CustomField>